<resources>
    <string name="my_app_name">Formax Pay</string>
    <!-- -->
    <string name="auth_key">5!mk516*pgh154%$#$#@$</string>
    <string name="token">gZuSjocItx5YtkPD3vDkGp2j8eQHsa</string>

    <string name="base_url">https://www.rechargewebs.com/web/api/</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_id">Password</string>
    <string name="enter_user_id">Enter Log in id</string>
    <string name="enter_password">Enter Password</string>
    <string name="agree_to_tems_notice">By Logging in, you are agree to our Terms and Conditions and that you have read out privacy policy</string>
    <string name="secure_login">Secure LogIn</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="retailer_access">retailer_access</string>
    <string name="loginsuccess">Log in Successfully</string>
    <string name="enteruserid">Enter User Id to Log In</string>
    <string name="enterpassword">Enter Password to Log In</string>
    <string name="enteridandpass"><![CDATA[Enter User Id & Password]]></string>
    <string name="bank_details">Bank Details</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="log_out">Log Out</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recharge_amp_bill_payments"><![CDATA[Recharge & Bill Payments]]></string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="recharge">Recharge</string>
    <string name="user_id">User Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="amount">Amount</string>
    <string name="browse_plans">Browse Plans</string>
    <string name="txn_id">Txn Id:</string>
    <string name="opt_txn_id">Opt Txn Id:</string>
    <string name="select_operator"> --Select Operator--</string>
    <string name="view_more">View More</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="wallet_1">Wallet 1</string>
    <string name="wallet_2">Wallet 2</string>
    <string name="fund_submit_button">Submit</string>
    <string name="select_board">--Select Board--</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="my_app_url">https://play.google.com/store/apps/details?id=com.rechargeweb.rechargeweb</string>
    <string name="update_message">This version of app is out dated. New version is available on Play Store. Please Update the app to the latest version</string>
    <string name="about_place_holder"><![CDATA[Formax IT Solutions Private Limited is India\'s most recommended Web Development & Software Development company in India
     providing world-class software & web development solutions for its clients since 2017.
     Formax IT Solutions Private Limited was founded in year 2017 by a team of IT Experts,]]></string>
    <string name="select_type">--Select Type--</string>
    <string name="select_walet">--Select Wallet--</string>
    <string name="note_validate">Note: You will charged RS/- 4 to get name by validating your account or you can enter name manually</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="enter_mobile_number">Mobile Number</string>
    <string name="header_text"><![CDATA[Recharge & Bill Payments]]></string>

    <style name="cash_withdraw">Cash Withdrawal</style>

    <integer name="swing_anim_time">750</integer>
    <string name="title_activity_sign_up">Create Account</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="image_to_close_the_bottom_sheet">Image to close the bottom sheet</string>
</resources>
