<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/sign_in_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="64dp"
                android:background="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="10dp"
                android:theme="@style/TextInputLayoutAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                    android:drawablePadding="16dp"
                    android:hint="@string/user_id"
                    android:inputType="text"
                    android:textColor="#000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="10dp"
                android:theme="@style/TextInputLayoutAppearance"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="16dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="#000" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgot_pass"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="end"
                android:text="@string/forget_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/log_In"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btnformate"
                android:gravity="center"
                android:padding="14dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/new_user_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/new_user_register_here"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/loading_indicator"
            style="@style/SpinKitView.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:SpinKit_Color="@color/colorAccent" />
    </LinearLayout>

    <include layout="@layout/no_internet_layout" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>