<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RechargeActivity">


    <Button
        android:id="@+id/recharge_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btnformate"
        android:padding="16dp"
        android:text="@string/recharge"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/browse_plans_text"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/amount_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/browse_plans_text"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/provider_name">

        <EditText
            android:id="@+id/amount"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="8"
            android:hint="@string/amount"
            android:inputType="number"
            android:maxEms="8"
            android:paddingStart="8dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_number_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/contact_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/select_wallet">

        <EditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Number"
            android:inputType="number"
            android:maxEms="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/provider_name"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_pick_operator"
        android:ems="10"
        android:hint="@string/select_operator"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/provider_logo"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/mobile_number_layout" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="4dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/provider_logo"
        app:layout_constraintStart_toStartOf="@+id/provider_name"
        app:layout_constraintTop_toBottomOf="@+id/provider_name" />

    <ImageView
        android:id="@+id/contact_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:onClick="onContactImageClick"
        android:src="@drawable/ic_perm_contact_calendar_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/mobile_number_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mobile_number_layout" />

    <ImageView
        android:id="@+id/provider_logo"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/provider_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/provider_name"
        tools:src="@mipmap/airtel_logo" />

    <ProgressBar
        android:id="@+id/loading_indicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/browse_plans_text"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/amount_input_layout" />

    <TextView
        android:id="@+id/browse_plans_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/browse_plans"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/amount_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/contact_image"
        app:layout_constraintTop_toTopOf="@+id/amount_input_layout" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_icon_back"
        android:padding="8dp"
        android:src="@drawable/ic_account_balance_wallet_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/amount_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/amount_input_layout" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_icon_back"
        android:padding="8dp"
        android:src="@drawable/ic_signal_cellular_4_bar_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/provider_name"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/provider_name" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/profile_icon_back"
        android:padding="8dp"
        android:src="@drawable/ic_phone_iphone_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/mobile_number_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mobile_number_layout" />

    <ImageView
        android:id="@+id/select_type_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/profile_icon_back"
        android:padding="8dp"
        android:src="@drawable/ic_account_balance_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/select_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/select_wallet" />

    <TextView
        android:id="@+id/select_wallet"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_pick_operator"
        android:hint="@string/select_type"
        android:padding="8dp"
        android:textSize="16sp"
        android:text="Prepaid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/select_type_image"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="6dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/mobile_number_layout"
        app:layout_constraintEnd_toEndOf="@+id/select_wallet"
        app:layout_constraintStart_toStartOf="@+id/select_wallet"
        app:layout_constraintTop_toBottomOf="@+id/select_wallet" />
</androidx.constraintlayout.widget.ConstraintLayout>
